package ar.utn.donatrack.incentivos.models.categoriasdonante;

public class Transformador extends CategoriaDonante{
    public Transformador() {
        super("Transformador", 3);
    }

    public CategoriaDonante siguienteCategoria(){
        return null;
    }
}
