package ar.utn.donatrack.incentivos.models.misiones;

import ar.utn.donatrack.incentivos.models.Donante;
import ar.utn.donatrack.incentivos.models.MetricasDonante;
import ar.utn.donatrack.incentivos.models.categoriasdonante.CategoriaDonante;
import ar.utn.donatrack.incentivos.models.insignias.Insignia;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class HabilDonador extends Mision {
    private int cantidadBienesRequerida;

    public HabilDonador(String nombre, String descripcion, CategoriaDonante categoriaRequerida, int cantidadBienesRequerida, Insignia insignia) {
        super(nombre, descripcion, categoriaRequerida, cantidadBienesRequerida, insignia);
        this.cantidadBienesRequerida = cantidadBienesRequerida;
    }

    public boolean estaCompletada(Donante donante) {     
        return progresoActual(donante) >= objetivo;
    }

    public int progresoActual(Donante donante) {     
        return new MetricasDonante().recordBienesUnicaDonacion(donante);
    }
}
