@startuml

class Donante {
  - categoriaActual: CategoriaDonante
  - insigniasObtenidas: List<InsigniaObtenida>
  - donaciones: List<DonacionRegistrada>
  - progresoMision: ProgresoMision
  + registrarDonacion(donacion: DonacionRegistrada): void
  + completarMision(mision: Mision): void
  + subirCategoria(): boolean
  + agregarInsignia(insignia: InsigniaObtenida): void
  + cambiarVisibilidadInsignia(idInsignia, visible: boolean): void
  + cambiarMisionActual(mision: Mision): void
  + misionesCompletadasEnPeriodo(mes: int, anio: int): int
}

abstract class CategoriaDonante {
  - nombre: String
  - orden: int
  - misiones: List<Mision>
  + primeraMision(): Mision
  + siguienteMision(misionActual: Mision): Mision
  + siguienteCategoria(): CategoriaDonante
}

class Colaborador {
  + siguienteCategoria(): CategoriaDonante
}

class Sostenedor {
  + siguienteCategoria(): CategoriaDonante
}

class Transformador {
  + siguienteCategoria(): CategoriaDonante
}

abstract class Mision {
  - nombre: String
  - descripcion: String
  - categoriaRequerida: CategoriaDonante
  - orden: int
  - insignia: Insignia
  + otorgarInsignia(): InsigniaObtenida
  + progresoActual(donante: Donante): int
  + restante(donante: Donante): int
  + estaCompletada(donante: Donante): boolean
}

class ProgresoMision {
  - misionActual: Mision
  + completadaPor(donante: Donante): boolean
  + progresoActual(donante: Donante): int
  + distanciaRestante(donante: Donante): int
  + cambiarMisionActual(mision: Mision): void
}

class Racha {
  - mesesRequeridos: int
  - progresoRacha: ProgresoRacha
  + progresoActual(donante: Donante): int
  + estaCompletada(donante: Donante): boolean
  + perdioProgreso(donante: Donante, fechaReferencia: LocalDate): boolean
}

class ProgresoRacha {
  + mesesConsecutivosDonando(donante: Donante, fechaReferencia: LocalDate): int
  + pasoUnMesCompletoSinDonaciones(donante: Donante, fechaReferencia: LocalDate): boolean
}

class Completitud {
  - categoriasRequeridas: int
  + progresoActual(donante: Donante): int
  + estaCompletada(donante: Donante): boolean
}

class HabilDonador {
  - cantidadBienesRequerida: int
  + progresoActual(donante: Donante): int
  + estaCompletada(donante: Donante): boolean
}

class DonacionesExitosas {
  - cantidadDonacionesRequerida: int
  + progresoActual(donante: Donante): int
  + estaCompletada(donante: Donante): boolean
}

class Insignia {
  - nombre: String
  - imagen: String
}

class InsigniaBuilder {
  - nombre: String
  - imagen: String
  + conNombre(nombre: String): InsigniaBuilder
  + conImagen(imagen: String): InsigniaBuilder
  + build(): Insignia
}

class InsigniaObtenida {
  - insignia: Insignia
  - visibilidad: boolean
  - fechaObtencion: LocalDate
}

class DonacionRegistrada {
  - fecha: LocalDateTime
  - categorias: Set<String>
  - cantidadBienes: int
  - exitosa: boolean
  - entidadBeneficiaria: String
}

class RankingMensual {
  - periodoInicio: LocalDateTime
  - fechaCalculo: LocalDateTime
  - posiciones: List<PosicionRanking>
  + calcular(donantes: List<Donante>, fechaCalculo: LocalDateTime): RankingMensual
  + topTres(): List<PosicionRanking>
  + top3(): List<PosicionRanking>
  + posicionDe(donanteId): int
}

class PosicionRanking {
  - donante: Donante
  - puesto: int
  - misionesCompletadas: int
  - diaDeCreacion: LocalDateTime
}

class MetricasDonante {
  + totalDonacionesHistoricas(donante: Donante): int
  + organizacionesAyudadas(donante: Donante): int
  + evolucionPorPeriodo(donante: Donante): List<EvolucionPeriodo>
  + donacionesMesActual(donante: Donante): int
  + donacionesExitosas(donante: Donante): int
  + recordBienesUnicaDonacion(donante: Donante): int
  + categoriasDistintasDonadas(donante: Donante): int
}

class EvolucionPeriodo {
  - mes: int
  - anio: int
  - cantidadDonaciones: int
  + incrementarDonaciones(): void
}

Donante -- CategoriaDonante
Donante -- ProgresoMision
Donante -- InsigniaObtenida
Donante -- DonacionRegistrada

CategoriaDonante -- Mision
Colaborador --|> CategoriaDonante
Sostenedor --|> CategoriaDonante
Transformador --|> CategoriaDonante

ProgresoMision -- Mision

Racha --|> Mision
Completitud --|> Mision
HabilDonador --|> Mision
DonacionesExitosas --|> Mision

Mision -- Insignia

Racha -- ProgresoRacha
ProgresoRacha -- Donante

InsigniaBuilder -- Insignia
InsigniaObtenida -- Insignia

RankingMensual -- PosicionRanking
PosicionRanking -- Donante

MetricasDonante -- Donante
MetricasDonante -- EvolucionPeriodo

@enduml